--- a/Real Analysis/UGA Solutions/Makefile
+++ b/Real Analysis/UGA Solutions/Makefile
@@ -1,8 +1,9 @@
 SHELL:=/bin/zsh
 FILENAME="Solutions.md"
+TITLE="Real Analysis Qualifying Exam Solutions"
 
 define renew_md = 
-{echo "---\n title: Real Analysis qualifying Exam Solutions\n---\n\n" && fd --full-path ./sections | sort -nr | sed 'N;s/\(.*\)\n\(.*\)/\2\n\1/' | grep "md" | sort -n | awk -F ":" '{print "!include " $$1 "\n";}' } > $(FILENAME) 2>&1
+{echo "---\n title: $(TITLE)\n---\n\n" && fd --full-path ./sections | sort -nr | sed 'N;s/\(.*\)\n\(.*\)/\2\n\1/' | grep "md" | sort -nr | awk -F ":" '{print "!include " $$1 "\n";}' } > $(FILENAME) 2>&1
 endef
 
 
