/ ‘Algebra/UGA Questions/Makefile’ / ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’

--- a/Algebra/UGA Questions/Makefile
+++ b/Algebra/UGA Questions/Makefile
@@ -1,8 +1,11 @@
 SHELL:=/bin/zsh
+FILENAME="UGA_Algebra_Qual_Solutions.md"
+TITLE="UGA Algebra Qualifying Exam Solutions"
 
 define renew_md = 
-{echo "---\n title: 'UGA Qualifying Exam Questions: Algebra'\n book: true\n---\n\n" && fd --full-path ./sections | sort -n | sed 'N;s/\(.*\)\n\(.*\)/\2\n\1/' | grep "md" | sort -nr | awk -F ":" '{print "!include " $$1 "\n";}' } > CombinedQuestions.md 2>&1
+{echo "---\n title: $(TITLE)\n---\n\n" && fd --full-path ./sections | sort -nr | sed 'N;s/\(.*\)\n\(.*\)/\2\n\1/' | grep "md" | sort -n | awk -F ":" '{print "!include " $$1 "\n";}' } > $(FILENAME) 2>&1
 endef
+
 
 renew: 
 	@$(renew_md)
@@ -10,16 +13,18 @@ renew:
 
 compile:
 	make renew
-	latex_preview -f ./CombinedQuestions.md -j
+	latex_preview -f $(FILENAME) -j
 	echo "Make done"
 
 watch:
 	make renew
-	latex_preview -f ./CombinedQuestions.md
+	latex_preview -f $(FILENAME) 
 
 view: 
 	make renew
-	latex_preview -f ./CombinedQuestions.md -v
+	latex_preview -f $(FILENAME) -v
 
 .ONESHELL:
 
+
+SHELL:=/bin/zsh
