/ ‘Algebra/UGA Questions/Makefile’ + ‘Algebra/UGA Questions/UGA_Algebra_Qual_Solutions.md’ + ‘Algebra/UGA Questions/UGA_Algebra_Qual_Solutions.pdf’

--- a/Algebra/UGA Questions/Makefile
+++ b/Algebra/UGA Questions/Makefile
@@ -3,7 +3,7 @@ FILENAME="UGA_Algebra_Qual_Solutions.md"
 TITLE="UGA Algebra Qualifying Exam Solutions"
 
 define renew_md = 
-{echo "---\n title: $(TITLE)\n---\n\n" && fd --full-path ./sections | sort -nr | sed 'N;s/\(.*\)\n\(.*\)/\2\n\1/' | grep "md" | sort -n | awk -F ":" '{print "!include " $$1 "\n";}' } > $(FILENAME) 2>&1
+{echo "---\n title: $(TITLE)\n---\n\n" && fd --full-path ./sections | sort -nr | sed 'N;s/\(.*\)\n\(.*\)/\2\n\1/' | grep "md" | sort -nr | awk -F ":" '{print "!include " $$1 "\n";}' } > $(FILENAME) 2>&1
 endef
 
 
