/ ‘Topology/UGA Solutions/Makefile’ / ‘Topology/UGA Solutions/Mike_Topology_Solutions.md’ / ‘Topology/UGA Solutions/Mike_Topology_Solutions.pdf’ / ‘Topology/UGA Solutions/sections/1_Point_Set.md’ / ‘Topology/UGA Solutions/sections/2_Fundamental_Group.md’ + ‘Topology/UGA Solutions/sections/3_Covering_Spaces.md’

--- a/Topology/UGA Solutions/Makefile
+++ b/Topology/UGA Solutions/Makefile
@@ -3,7 +3,7 @@ FILENAME="Mike_Topology_Solutions.md"
 TITLE="Solutions to Mike\'s Compendium of Problems"
 
 define renew_md = 
-{echo "---\n title: $(TITLE)\n---\n\n" && fd --full-path ./sections | sort -nr | sed 'N;s/\(.*\)\n\(.*\)/\2\n\1/' | grep "md" | sort -n | awk -F ":" '{print "!include " $$1 "\n \\newpage";}' } > $(FILENAME) 2>&1
+{echo "---\n title: $(TITLE)\n---\n\n" && fd --full-path ./sections | sort -nr | sed 'N;s/\(.*\)\n\(.*\)/\2\n\1/' | grep "md" | sort -n | awk -F ":" '{print "!include " $$1 "\n \n \\newpage \n";}' } > $(FILENAME) 2>&1
 endef
 
 
