--- a/Real Analysis/Review Doc/Makefile
+++ b/Real Analysis/Review Doc/Makefile
@@ -3,7 +3,7 @@ FILENAME="Real_Analysis_Qual_Notes.md"
 TITLE="Real Analysis Qualifying Exam Notes"
 
 define renew_md = 
-{echo "---\n title: $(TITLE)\n---\n\n" && fd --full-path ./sections | sort -nr | sed 'N;s/\(.*\)\n\(.*\)/\2\n\1/' | grep "md" | sort -n | awk -F ":" '{print "!include " $$1 "\n";}' } > $(FILENAME) 2>&1
+{echo "---\n title: $(TITLE)\n book: true\n---\n\n" && fd --full-path ./sections | sort -nr | sed 'N;s/\(.*\)\n\(.*\)/\2\n\1/' | grep "md" | sort -n | awk -F ":" '{print "!include " $$1 "\n";}' } > $(FILENAME) 2>&1
 endef
 
 
