--- a/Topology/UGA Solutions/Makefile
+++ b/Topology/UGA Solutions/Makefile
@@ -1,28 +1,19 @@
 SHELL:=/bin/zsh
 FILENAME="Mike_Topology_Solutions.md"
-TITLE="Solutions to Mike\'s Compendium of Problems"
 
-define renew_md = 
-{echo "---\n title: $(TITLE)\n---\n\n" && fd --full-path ./sections | sort -nr | sed 'N;s/\(.*\)\n\(.*\)/\2\n\1/' | grep "md" | sort -n | awk -F ":" '{print "!include " $$1 "\n \n \\newpage \n";}' } > $(FILENAME) 2>&1
-endef
-
-
-renew: 
-	@$(renew_md)
-	echo "Done"
+.SILENT:
 
 compile:
-	make renew
-	latex_preview -f $(FILENAME) -j
+	latex_preview -f $(FILENAME) -j -z
 	echo "Make done"
 
 watch:
-	make renew
-	latex_preview -f $(FILENAME) 
+	latex_preview -f $(FILENAME) -z
 
 view: 
-	make renew
-	latex_preview -f $(FILENAME) -v
+	latex_preview -f $(FILENAME) -v -z
+
+tex:
+	latex_preview -f $(FILENAME) -x -j -z
 
 .ONESHELL:
-
