--- a/Algebra/Review Doc/Makefilenew
+++ b/Algebra/Review Doc/Makefilenew
@@ -1,5 +1,5 @@
 SHELL:=/bin/zsh
-FILENAME="Algebra_Qual_Notes.md"
+FILENAME="AlgebraicCurves"
 
 ## WARNING: "reset" wipes out this directory!
 TEMP_DIR="/tmp/"
