--- a/Algebra/UGA Questions/data.yaml
+++ b/Algebra/UGA Questions/data.yaml
@@ -1,5 +1,6 @@
 ---
-title: "UGA Algebra Qualifying Exam Questions (Spring 2011 -- Spring 2020)"
+title: "UGA Algebra Qualifying Exam Questions (Spring 2011 -- Spring 2021)"
+hidesolutions: true
+todos: true
 ---
-
 
