- ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.html’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.md’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.pdf’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.tex’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions_stripped.md’ / ‘Algebra/UGA Questions/data.yaml’ - ‘Algebra/UGA Questions/tex_tempfiles/UGA_Algebra_Qual_Questions.pdf’ + ‘Algebra/UGA Questions/tex_tempfiles/’

--- a/Algebra/UGA Questions/data.yaml
+++ b/Algebra/UGA Questions/data.yaml
@@ -1,6 +1,6 @@
 ---
 title: "UGA Algebra Qualifying Exam Questions (Spring 2011 -- Spring 2021)"
-#hidesolutions: true
+hidesolutions: true
 todos: true
 ---
 
