--- a/Algebra/UGA Questions/data.yaml
+++ b/Algebra/UGA Questions/data.yaml
@@ -1,6 +1,7 @@
 ---
 title: "UGA Algebra Qualifying Exam Questions (Spring 2011 -- Spring 2021)"
-hidesolutions: true
-todos: true
+hide_proofs: true
+kill_proofs: true
+todos: false 
 ---
 
