--- a/Algebra/UGA Question (with solutions)/data.yaml
+++ b/Algebra/UGA Question (with solutions)/data.yaml
@@ -1,7 +1,5 @@
 ---
-title: "UGA Algebra Qualifying Exam Questions (Spring 2011 -- Spring 2021)"
-hide_proofs: true
-kill_proofs: true
-todos: false 
+title: "UGA Algebra Qualifying Exam Solutions (Spring 2011 -- Spring 2021)"
+todos: true
 ---
 
