--- a/Real Analysis/UGA Questions (no solutions)/data.yaml
+++ b/Real Analysis/UGA Questions (no solutions)/data.yaml
@@ -1,5 +1,8 @@
 ---
-title: "UGA Real Analysis Questions (Fall 2014 -- Spring 2020)"
+title: "UGA Real Analysis Questions (Fall 2014 -- Spring 2021)"
+hide_proofs: true
+kill_proofs: true
+todos: false 
 ---
 
 
